--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "i18next": "^23.7.7",
     "ky": "^1.1.3",
     "lottie-react-native": "^5.1.6",
-    "native-base": "^3.4.28",
+    "native-base": "^2.15.2",
     "react": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-radial-gradient": "^1.1.4",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.27.0",
