--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "serve-json": "json-server --watch db.json --port 3000"
+    "test": "jest"
   },
   "dependencies": {
     "@gluestack-style/react": "^1.0.43",
@@ -26,7 +25,6 @@
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "i18next": "^23.7.7",
-    "json-server": "^1.0.0-alpha.23",
     "ky": "^1.1.3",
     "lottie-react-native": "^5.1.6",
     "native-base": "^2.15.2",
