--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lottie-react-native": "^5.1.6",
     "native-base": "^2.15.2",
     "react": "^18.2.0",
+    "react-devtools": "^5.0.2",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.7",
     "react-native-dropdown-picker": "^5.4.6",
