--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-radial-gradient": "^1.1.4",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^3.3.2",
